log
Fri 09 Sep 2022 12:49:58 PM UTC: 
 hashmap.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
b5d5607
Fri 09 Sep 2022 12:50:37 PM UTC: 
 hashmap.c | 13 ++++++++++++-
 1 file changed, 12 insertions(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:56:3: error: implicit declaration of function ‘info_msg’ [-Werror=implicit-function-declaration]
   56 |   info_msg("inicializando la tabla...");
      |   ^~~~~~~~
hashmap.c:65:41: error: implicit declaration of function ‘_strdup’; did you mean ‘strdup’? [-Werror=implicit-function-declaration]
   65 |     map->buckets[hashs[i]] = createPair(_strdup(words[i]),_strdup("exist"));
      |                                         ^~~~~~~
      |                                         strdup
hashmap.c:65:41: error: passing argument 1 of ‘createPair’ makes pointer from integer without a cast [-Werror=int-conversion]
   65 |     map->buckets[hashs[i]] = createPair(_strdup(words[i]),_strdup("exist"));
      |                                         ^~~~~~~~~~~~~~~~~
      |                                         |
      |                                         int
hashmap.c:19:27: note: expected ‘char *’ but argument is of type ‘int’
   19 | Pair * createPair( char * key,  void * value) {
      |                    ~~~~~~~^~~
hashmap.c:65:59: error: passing argument 2 of ‘createPair’ makes pointer from integer without a cast [-Werror=int-conversion]
   65 |     map->buckets[hashs[i]] = createPair(_strdup(words[i]),_strdup("exist"));
      |                                                           ^~~~~~~~~~~~~~~~
      |                                                           |
      |                                                           int
hashmap.c:19:40: note: expected ‘void *’ but argument is of type ‘int’
   19 | Pair * createPair( char * key,  void * value) {
      |                                 ~~~~~~~^~~~~
test.c: At top level:
test.c:8:8: error: conflicting types for ‘_strdup’
    8 | char * _strdup(const char * str) {
      |        ^~~~~~~
In file included from test.c:4:
hashmap.c:65:41: note: previous implicit declaration of ‘_strdup’ was here
   65 |     map->buckets[hashs[i]] = createPair(_strdup(words[i]),_strdup("exist"));
      |                                         ^~~~~~~
test.c:36:6: error: conflicting types for ‘info_msg’ [-Werror]
   36 | void info_msg(char* msg){
      |      ^~~~~~~~
In file included from test.c:4:
hashmap.c:56:3: note: previous implicit declaration of ‘info_msg’ was here
   56 |   info_msg("inicializando la tabla...");
      |   ^~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
1a47540
Fri 09 Sep 2022 12:59:23 PM UTC: 
 hashmap.c | 19 +++++++------------
 1 file changed, 7 insertions(+), 12 deletions(-)
 tests:  1|5
total_score: 10/70
e5d6b71
Fri 09 Sep 2022 01:01:10 PM UTC: 
 hashmap.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
 tests:  1|5
total_score: 10/70
6b9af14
